@@ -11,7 +11,7 @@ Imports: ca, clipr, data.table, dplyr (>= 0.4.3), ggplot2, grid,
         gridExtra, quanteda, SnowballC, stringi, tidyr, tm, utils,
         wordcloud
 Suggests: knitr, rmarkdown, qdapRegex, rgl, testthat
-Date: 2016-01-17
+Date: 2016-01-18
 License: GPL-2
 LazyData: TRUE
 Roxygen: list(wrap = FALSE)
