@@ -30,6 +30,7 @@ export(is.global)
 export(ngram_collocations)
 export(plot_ca)
 export(plot_counts)
+export(plot_cum_percent)
 export(plot_freq)
 export(search_term)
 export(search_term_which)
