@@ -33,6 +33,8 @@ NEW FEATURES
 * `classification_project` added to make a classification modeling project
   template.
 
+* `plot_cum_percent` added for cumulative percent plot of frequent terms.
+
 MINOR FEATURES
 
 IMPROVEMENTS
